--- a/index.html
+++ b/index.html
@@ -99,9 +99,6 @@
                 >MORE</a
               >
               <div class="dropdown-menu" aria-labelledby="dropdown01">
-                <a class="dropdown-item page-scroll" href="article.html"
-                  >ARTICLE DETAILS</a
-                >
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item page-scroll" href="terms.html"
                   >TERMS CONDITIONS</a
@@ -256,7 +253,7 @@
               satisfaction than seeing my clients leave with a smile on their
               face and a spring in their step."
             </p>
-            <p class="testimonial-author">Hannah Graciela P. Acojedo - CEO</p>
+            <p class="testimonial-author">Grace - CEO</p>
           </div>
           <!-- end of col -->
         </div>
@@ -450,7 +447,7 @@
                         <div class="image-container">
                           <img
                             class="img-fluid"
-                            src="images/description-1.jpg"
+                            src="pictures/haircut.jpg"
                             alt="alternative"
                           />
                         </div>
@@ -459,16 +456,18 @@
                       <!-- end of col -->
                       <div class="col-lg-6">
                         <div class="text-container">
-                          <h3>Lobortis Feugiat</h3>
+                          <h3>Hair Cut</h3>
                           <p>
-                            In dictum non consectetur a erat nam. Et tortor
-                            consequat id porta nibh venenatis. Rhoncus mattis
-                            rhoncus urna neque viverra. Bibendum ut tristique et
-                            egestas quis ipsum suspendisse ultrices
+                            A trim and shape service can help keep your hair
+                            healthy and looking its best. By carefully trimming
+                            and shaping your hair, a skilled stylist can enhance
+                            your natural features and create a cohesive style
+                            that suits you. Whether you're looking for a subtle
+                            touch-up or a complete transformation, a trim and
+                            shape service is an essential part of any hair care
+                            routine.
                           </p>
-                          <a class="btn-outline-reg" href="article.html"
-                            >DETAILS</a
-                          >
+                          <a class="btn-outline-reg" href="#header">BOOK NOW</a>
                         </div>
                         <!-- end of text-container -->
                       </div>
@@ -486,7 +485,7 @@
                         <div class="image-container">
                           <img
                             class="img-fluid"
-                            src="images/description-2.jpg"
+                            src="pictures/haircolor.jpg"
                             alt="alternative"
                           />
                         </div>
@@ -495,16 +494,17 @@
                       <!-- end of col -->
                       <div class="col-lg-6">
                         <div class="text-container">
-                          <h3>Vivamus Augue</h3>
+                          <h3>Hair Color</h3>
                           <p>
-                            Lorem ipsum dolor sit amet consectetur adipiscing
-                            elit, sed do eiusmod tempor incididunt ut labore et
-                            dolore magna aliqua. Senectus et netus et malesuada
-                            fames. Male vel risus commodo
+                            A dye and highlight service is a great way to change
+                            up your look and express your personal style.
+                            Whether you want a subtle or dramatic change, a
+                            skilled stylist can help you achieve the perfect
+                            color and texture. With high-quality products and
+                            techniques, you can be sure that your hair will look
+                            and feel healthy and vibrant.
                           </p>
-                          <a class="btn-outline-reg" href="article.html"
-                            >DETAILS</a
-                          >
+                          <a class="btn-outline-reg" href="#header">BOOK NOW</a>
                         </div>
                         <!-- end of text-container -->
                       </div>
@@ -522,7 +522,7 @@
                         <div class="image-container">
                           <img
                             class="img-fluid"
-                            src="images/description-3.jpg"
+                            src="pictures/makeup.jpg"
                             alt="alternative"
                           />
                         </div>
@@ -531,16 +531,18 @@
                       <!-- end of col -->
                       <div class="col-lg-6">
                         <div class="text-container">
-                          <h3>Egetro Arcules</h3>
+                          <h3>Make Up</h3>
                           <p>
-                            Eget egestas purus viverra accumsan in nisl nisi.
-                            Pellentesque elit ullamcorper dignissim cras
-                            tincidunt lobortis. Et leo duis ut diam quam nulla.
-                            Purus in mollis nunc sed id semper aenean
+                            Makeup services can transform your look and enhance
+                            your natural beauty. Whether you're getting ready
+                            for a special occasion or just want to treat
+                            yourself to a little pampering, there's a makeup
+                            service that's right for you. From subtle and
+                            natural to bold and glamorous, a skilled makeup
+                            artist can help you achieve the perfect look for any
+                            occasion.
                           </p>
-                          <a class="btn-outline-reg" href="article.html"
-                            >DETAILS</a
-                          >
+                          <a class="btn-outline-reg" href="#header">BOOK NOW</a>
                         </div>
                         <!-- end of text-container -->
                       </div>
@@ -730,9 +732,10 @@
           <div class="col-lg-12">
             <h2>PROJECTS</h2>
             <p class="p-heading">
-              Egestas quis ipsum suspendisse ultrices gravida dictum fusce ut
-              placerat. Sed viverra tellus in hac habitasse. Auctor neque vitae
-              tempus quam nero veripse
+              Showcasing our previous satisfied customers is not only a
+              testament to our salon's dedication to excellence but also a
+              reflection of our commitment to creating a memorable experience
+              for each and every client.
             </p>
           </div>
           <!-- end of col -->
@@ -742,6 +745,9 @@
           <div class="col-lg-12">
             <!-- Filter -->
             <div class="button-group filters-button-group">
+              <a class="button is-checked" data-filter="*"
+                ><span>SHOW ALL</span></a
+              >
               <a class="button" data-filter=".hair"><span>HAIR</span></a>
               <a class="button" data-filter=".makeup"><span>MAKEUP</span></a>
             </div>
@@ -2216,4 +2222,4 @@
 </html>
 
 Built with Bootstrap 4, HTML/CSS, JS, Google Fonts, Font Awesome; Last modified:
-3/27/2023 @ 20:34:42
+3/28/2023 @ 21:10:16
