--- a/index.html
+++ b/index.html
@@ -1211,18 +1211,18 @@
                     <div class="card">
                       <img
                         class="card-image"
-                        src="images/testimonial-1.jpg"
+                        src="images/Testimonial2-Mikee.jpg"
                         alt="alternative"
                       />
                       <div class="card-body">
                         <p class="testimonial-text">
-                          "I had an amazing experience at this hair salon! The
-                          stylist really listened to what I wanted and gave me
-                          great recommendations. The end result was exactly what
-                          I had envisioned, and I felt like a million bucks
-                          leaving the salon."
+                          "Great experience they made my hair Beautiful
+                          terrific! <br />
+                          <br />
+                          Last-minute appointments · Natural hair experts ·
+                          Affordable haircuts · Beautiful results"
                         </p>
-                        <p class="testimonial-author">Jessica P. - Customer</p>
+                        <p class="testimonial-author">Mikee - Customer</p>
                       </div>
                     </div>
                   </div>
@@ -1234,18 +1234,16 @@
                     <div class="card">
                       <img
                         class="card-image"
-                        src="images/testimonial-2.jpg"
+                        src="images/Testimonial3-Jonnalie-Pingol.jpg"
                         alt="alternative"
                       />
                       <div class="card-body">
                         <p class="testimonial-text">
-                          "I was blown away by the level of professionalism and
-                          expertise at this hair salon. The staff were all
-                          friendly and knowledgeable, and the service I received
-                          was top-notch. I would highly recommend this salon to
-                          anyone looking for a great haircut or color."
+                          "Thank you so much Glam n Grace team for my healthy
+                          and shiny hair always. Sobrang accommodating ng mga
+                          staff and friendly environment. Kudos to the team."
                         </p>
-                        <p class="testimonial-author">Jack M. - Customer</p>
+                        <p class="testimonial-author">Jonnalie P. - Customer</p>
                       </div>
                     </div>
                   </div>
@@ -1257,18 +1255,21 @@
                     <div class="card">
                       <img
                         class="card-image"
-                        src="images/testimonial-3.jpg"
+                        src="images/Testimonial4-Yvette-David.jpg"
                         alt="alternative"
                       />
                       <div class="card-body">
                         <p class="testimonial-text">
-                          "This hair salon exceeded all of my expectations. The
-                          atmosphere was warm and inviting, and the staff were
-                          incredibly skilled and attentive. I was impressed by
-                          the attention to detail and the care that went into
-                          every aspect of my appointment."
+                          "We are very happy with their service. Whats unique
+                          with them are the CHEMICAL FREE solutions which is a
+                          BIG PLUS since my daughter is asthmatic. Now we are
+                          able to enjoy beautiful hair without the worries of
+                          chemicals. Love it. <br />
+                          <br />
+                          Good with children · Amazing results · Beautiful
+                          results · Great deals"
                         </p>
-                        <p class="testimonial-author">Allene D. - Customer</p>
+                        <p class="testimonial-author">Yvette D. - Customer</p>
                       </div>
                     </div>
                   </div>
@@ -1280,19 +1281,18 @@
                     <div class="card">
                       <img
                         class="card-image"
-                        src="images/testimonial-4.jpg"
+                        src="images/Testimonial1-Juliane-Indiongco.jpg"
                         alt="alternative"
                       />
                       <div class="card-body">
                         <p class="testimonial-text">
-                          "I was thoroughly impressed with the service I
-                          received at this hair salon. The stylist was able to
-                          perfectly execute the style I wanted, and the end
-                          result was even better than I had imagined. I will
-                          definitely be returning for all of my future haircare
-                          needs."
+                          "The main hairdresser was unfriendly and kept
+                          insinuating that I lied about my hair treatment
+                          history; it made for an unpleasant experience and
+                          disappointing service. In any case, I'd still like to
+                          appreciate the other kind and accommodating stylists."
                         </p>
-                        <p class="testimonial-author">Bryan T. - Customer</p>
+                        <p class="testimonial-author">Juliane P. - Customer</p>
                       </div>
                     </div>
                   </div>
@@ -1304,19 +1304,21 @@
                     <div class="card">
                       <img
                         class="card-image"
-                        src="images/testimonial-5.jpg"
+                        src="images/Testimonial5-Rhizza-Lui.jpg"
                         alt="alternative"
                       />
                       <div class="card-body">
                         <p class="testimonial-text">
-                          "I felt pampered and taken care of from the moment I
-                          walked into this hair salon. The staff were all
-                          incredibly friendly and accommodating, and the stylist
-                          really took the time to understand my needs and
-                          preferences. I left feeling relaxed, refreshed, and
-                          confident."
+                          "Very worth ittt and the bessst salon. I didn’t regret
+                          having them, chose Glam & Grace Beauty Studio -
+                          Angeles to do my hair done. Kudos!! From the chats
+                          that really responsive hanggang paguwi ko lol sinabay
+                          nila ako sa jeep and nalibre pa ako ng pamasahe I’m so
+                          shy at the same time, thankful I met them. With free
+                          coffee pa. They’re really hands on and superb staffs.
+                          Thank you again! Whatta experience ."
                         </p>
-                        <p class="testimonial-author">Ruth S. - Customer</p>
+                        <p class="testimonial-author">Rhizza L. - Customer</p>
                       </div>
                     </div>
                   </div>
@@ -1328,18 +1330,108 @@
                     <div class="card">
                       <img
                         class="card-image"
-                        src="images/testimonial-6.jpg"
+                        src="images/Testimonial6-Cyrene-Lumbang.jpg"
                         alt="alternative"
                       />
                       <div class="card-body">
                         <p class="testimonial-text">
-                          "This is by far the best hair salon I have ever been
-                          to. The staff are all highly skilled and professional,
-                          and the salon itself is modern and stylish. I always
-                          leave feeling like a million bucks and can't recommend
-                          this salon highly enough."
+                          "Thank you so much Glam & Grace Beauty Studio! Nice ng
+                          place and sobrang bait ng mga staff. May pa free
+                          coffee pa Super ganda po ng buhok ko. From super dry
+                          na buhok ngayon naging super lambot na nya and shiny.
+                          Thank youuuu!!"
                         </p>
-                        <p class="testimonial-author">Cindy C. - Customer</p>
+                        <p class="testimonial-author">Cyrene L. - Customer</p>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end of swiper-slide -->
+                  <!-- end of slide -->
+
+                  <!-- Slide -->
+                  <div class="swiper-slide">
+                    <div class="card">
+                      <img
+                        class="card-image"
+                        src="images/Testimonial7-Cha-Morales.jpg"
+                        alt="alternative"
+                      />
+                      <div class="card-body">
+                        <p class="testimonial-text">
+                          "Best experience! You all deserve 10! Thank you Glam
+                          Team!"
+                        </p>
+                        <p class="testimonial-author">Cha M. - Customer</p>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end of swiper-slide -->
+                  <!-- end of slide -->
+
+                  <!-- Slide -->
+                  <div class="swiper-slide">
+                    <div class="card">
+                      <img
+                        class="card-image"
+                        src="images/Testimonial8-Abigail-Basilio.jpg"
+                        alt="alternative"
+                      />
+                      <div class="card-body">
+                        <p class="testimonial-text">
+                          "My go-to beauty salon for about 5 years now
+                          Appreciate their excellent service and accommodating
+                          staff <br />
+                          <br />
+                          Experienced stylists · Professional hair products ·
+                          Beautiful results · Great haircuts"
+                        </p>
+                        <p class="testimonial-author">Abigail B. - Customer</p>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end of swiper-slide -->
+                  <!-- end of slide -->
+
+                  <!-- Slide -->
+                  <div class="swiper-slide">
+                    <div class="card">
+                      <img
+                        class="card-image"
+                        src="images/Testimonial9-Ivy-Ocampo.jpg"
+                        alt="alternative"
+                      />
+                      <div class="card-body">
+                        <p class="testimonial-text">
+                          "Very friendly staff and their work exceeded my
+                          expectations. shop is clean too. <br />
+                          <br />
+                          · Fantastic haircuts."
+                        </p>
+                        <p class="testimonial-author">Ivy O. - Customer</p>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end of swiper-slide -->
+                  <!-- end of slide -->
+
+                  <!-- Slide -->
+                  <div class="swiper-slide">
+                    <div class="card">
+                      <img
+                        class="card-image"
+                        src="images/Testimonial10-Chloe-Reyes.jpg"
+                        alt="alternative"
+                      />
+                      <div class="card-body">
+                        <p class="testimonial-text">
+                          "Everyone was so friendly, the staff made me feel as
+                          comfortable as possible. I was worried my hair would
+                          be too tough to handle but the results are amazing.
+                          Looking forward to coming back. <br />
+                          <br />
+                          Amazing results · Good for curly hair"
+                        </p>
+                        <p class="testimonial-author">Chloe R. - Customer</p>
                       </div>
                     </div>
                   </div>
