--- a/privacy.html
+++ b/privacy.html
@@ -43,7 +43,7 @@
     <link href="css/styles.css" rel="stylesheet" />
 
     <!-- Favicon  -->
-    <link rel="icon" href="images/favicon.png" />
+    <link rel="icon" href="pictures/icon.png" />
   </head>
   <body data-spy="scroll" data-target=".fixed-top">
     <!-- Navigation -->
