--- a/privacy.html
+++ b/privacy.html
@@ -36,6 +36,10 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&family=Raleway:wght@700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    />
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/fontawesome-all.css" rel="stylesheet" />
     <link href="css/swiper.css" rel="stylesheet" />
@@ -334,17 +338,12 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="footer-col first">
-              <h6>RATE OUR WEBSITE</h6>
-              <input type="radio" name="rating1" id="rating1" />
-              <label for="rating1" class="fa fa-star"></label>
-              <input type="radio" name="rating1" id="rating2" />
-              <label for="rating2" class="fa fa-star"></label>
-              <input type="radio" name="rating1" id="rating3" />
-              <label for="rating3" class="fa fa-star"></label>
-              <input type="radio" name="rating1" id="rating4" />
-              <label for="rating4" class="fa fa-star"></label>
-              <input type="radio" name="rating1" id="rating5" />
-              <label for="rating5" class="fa fa-star"></label>
+              <h6>Location</h6>
+              <p class="p-small">
+                <i class="fas fa-map-marker-alt"></i> &nbsp;1st floor Casa Mitzi
+                Bldg, Sto. Rosario Street, Brgy Sto. Domingo, Angeles City of
+                Pampanga, Philippines
+              </p>
             </div>
             <!-- end of footer-col -->
             <div class="footer-col second">
@@ -361,6 +360,24 @@
 
                   <a class="page-scroll" href="#pricing">Pricing</a>
                 </li>
+                <li>
+                  Socials:
+                  <a
+                    href="https://www.facebook.com/GlamAndGraceAngeles"
+                    target="_blank"
+                    >Facebook</a
+                  >,
+                  <a
+                    href="https://www.instagram.com/glamandgracebeautystudio/"
+                    target="_blank"
+                    >Instagram</a
+                  >,
+                  <a
+                    href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.tiktok.com%2F%40glamandgracebeautystudio%3F_t%3D8bGQK8Rp4OZ%26_r%3D1%26fbclid%3DIwAR14icka7SloRrtSdStDffoNoclBUQ48YPf63-mMpMOuanOXwOVVG29wRiY&h=AT0RGONBW9Rg6OdGv2BvzIQFXrfp8Vn64tG9BXLt5DMLLXPoXKHP3Xg5KmCMI2nfQTwbcMtTfHlW3l_aYpO4KiRfhuOfXKtZxNLRcSNK8240_x8HiJubb0OnaRW5rmwk8mQJsw"
+                    target="_blank"
+                    >Tiktok</a
+                  >
+                </li>
               </ul>
             </div>
             <!-- end of footer-col -->
@@ -375,9 +392,12 @@
                 </a>
               </span>
               <span class="fa-stack">
-                <a href="#twitter">
+                <a
+                  href="https://www.tiktok.com/@glamandgracebeautystudio?_t=8bGQK8Rp4OZ&_r=1&fbclid=IwAR14icka7SloRrtSdStDffoNoclBUQ48YPf63-mMpMOuanOXwOVVG29wRiY"
+                  target="_blank"
+                >
                   <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x"></i>
+                  <i class="fab fa-tiktok fa-stack-1x"></i>
                 </a>
               </span>
               <span class="fa-stack">
@@ -390,7 +410,7 @@
                 </a>
               </span>
               <p class="p-small">
-                Follow us on our Socials
+                Send us an email at: <br />
                 <a href="mailto:glam&grace@gmail.com"
                   ><strong>glam&grace@gmail.com</strong></a
                 >
@@ -405,8 +425,6 @@
       <!-- end of container -->
     </div>
     <!-- end of footer -->
-    <!-- end of footer -->
-
     <!-- Copyright -->
     <div class="copyright">
       <div class="container">
