--- a/index.html
+++ b/index.html
@@ -1565,13 +1565,13 @@
                 <span class="fa-stack">
                   <a href="#your-link">
                     <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-twitter fa-stack-1x"></i>
+                    <i class="fab fa-facebook-f fa-stack-1x"></i>
                   </a>
                 </span>
                 <span class="fa-stack">
                   <a href="#your-link">
                     <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                    <i class="fab fa-instagram fa-stack-1x"></i>
                   </a>
                 </span>
               </div>
@@ -1593,13 +1593,13 @@
                 <span class="fa-stack">
                   <a href="#your-link">
                     <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-twitter fa-stack-1x"></i>
+                    <i class="fab fa-facebook-f fa-stack-1x"></i>
                   </a>
                 </span>
                 <span class="fa-stack">
                   <a href="#your-link">
                     <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                    <i class="fab fa-instagram fa-stack-1x"></i>
                   </a>
                 </span>
               </div>
@@ -1621,13 +1621,13 @@
                 <span class="fa-stack">
                   <a href="#your-link">
                     <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-twitter fa-stack-1x"></i>
+                    <i class="fab fa-facebook-f fa-stack-1x"></i>
                   </a>
                 </span>
                 <span class="fa-stack">
                   <a href="#your-link">
                     <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                    <i class="fab fa-instagram fa-stack-1x"></i>
                   </a>
                 </span>
               </div>
@@ -1649,13 +1649,13 @@
                 <span class="fa-stack">
                   <a href="#your-link">
                     <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-twitter fa-stack-1x"></i>
+                    <i class="fab fa-facebook-f fa-stack-1x"></i>
                   </a>
                 </span>
                 <span class="fa-stack">
                   <a href="#your-link">
                     <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-linkedin-in fa-stack-1x"></i>
+                    <i class="fab fa-instagram fa-stack-1x"></i>
                   </a>
                 </span>
               </div>
@@ -1692,8 +1692,8 @@
               </li>
               <li>
                 <i class="fas fa-envelope"></i> &nbsp;<a
-                  href="mailto:glam&grace@gmail.com"
-                  >glam&grace@gmail.com</a
+                  href="mailto:glamandgracebeautystudio@gmail.com"
+                  >glamandgracebeautystudio@gmail.com</a
                 >
               </li>
             </ul>
@@ -1709,12 +1709,10 @@
                 width="600"
                 height="450"
                 style="border: 0"
-                allowfullscreen=""
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"
               >
-                allowfullscreen ></iframe
-              >
+              </iframe>
             </div>
           </div>
           <!-- end of col -->
@@ -1779,17 +1777,17 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="footer-col first">
-              <h6>RATE OUR WEBSITE</h6>
-              <input type="radio" name="rating1" id="rating1" />
-              <label for="rating1" class="fa fa-star"></label>
-              <input type="radio" name="rating1" id="rating2" />
-              <label for="rating2" class="fa fa-star"></label>
-              <input type="radio" name="rating1" id="rating3" />
-              <label for="rating3" class="fa fa-star"></label>
-              <input type="radio" name="rating1" id="rating4" />
-              <label for="rating4" class="fa fa-star"></label>
-              <input type="radio" name="rating1" id="rating5" />
-              <label for="rating5" class="fa fa-star"></label>
+              <h6>Contact Us</h6>
+              <p class="p-small">
+                <i class="fas fa-map-marker-alt"></i> &nbsp;1st floor Casa Mitzi
+                Bldg, Sto. Rosario Street, Brgy Sto. Domingo, Angeles City of
+                Pampanga, Philippines
+              </p>
+              <p>
+                <i class="fas fa-phone"></i> &nbsp;<a href="tel:09061245885"
+                  >+63 906 124 5885</a
+                >
+              </p>
             </div>
             <!-- end of footer-col -->
             <div class="footer-col second">
@@ -1806,6 +1804,24 @@
 
                   <a class="page-scroll" href="#pricing">Pricing</a>
                 </li>
+                <li>
+                  Socials:
+                  <a
+                    href="https://www.facebook.com/GlamAndGraceAngeles"
+                    target="_blank"
+                    >Facebook</a
+                  >,
+                  <a
+                    href="https://www.instagram.com/glamandgracebeautystudio/"
+                    target="_blank"
+                    >Instagram</a
+                  >,
+                  <a
+                    href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.tiktok.com%2F%40glamandgracebeautystudio%3F_t%3D8bGQK8Rp4OZ%26_r%3D1%26fbclid%3DIwAR14icka7SloRrtSdStDffoNoclBUQ48YPf63-mMpMOuanOXwOVVG29wRiY&h=AT0RGONBW9Rg6OdGv2BvzIQFXrfp8Vn64tG9BXLt5DMLLXPoXKHP3Xg5KmCMI2nfQTwbcMtTfHlW3l_aYpO4KiRfhuOfXKtZxNLRcSNK8240_x8HiJubb0OnaRW5rmwk8mQJsw"
+                    target="_blank"
+                    >Tiktok</a
+                  >
+                </li>
               </ul>
             </div>
             <!-- end of footer-col -->
@@ -1820,9 +1836,12 @@
                 </a>
               </span>
               <span class="fa-stack">
-                <a href="#twitter">
+                <a
+                  href="https://www.tiktok.com/@glamandgracebeautystudio?_t=8bGQK8Rp4OZ&_r=1&fbclid=IwAR14icka7SloRrtSdStDffoNoclBUQ48YPf63-mMpMOuanOXwOVVG29wRiY"
+                  target="_blank"
+                >
                   <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x"></i>
+                  <i class="fab fa-tiktok fa-stack-1x"></i>
                 </a>
               </span>
               <span class="fa-stack">
@@ -1835,9 +1854,9 @@
                 </a>
               </span>
               <p class="p-small">
-                Follow us on our Socials
-                <a href="mailto:glam&grace@gmail.com"
-                  ><strong>glam&grace@gmail.com</strong></a
+                Send us an email at: <br />
+                <a href="mailto:glamandgracebeautystudio@gmail.com"
+                  ><strong>glamandgracebeautystudio@gmail.com</strong></a
                 >
               </p>
             </div>
@@ -1849,7 +1868,6 @@
       </div>
       <!-- end of container -->
     </div>
-    <!-- end of footer -->
     <!-- end of footer -->
 
     <!-- Copyright -->
@@ -1887,4 +1905,4 @@
 </html>
 
 Built with Bootstrap 4, HTML/CSS, JS, Google Fonts, Font Awesome; Last modified:
-4/6/2023 @ 15:54:11
+4/7/2023 @ 10:47:59
