--- a/privacy.html
+++ b/privacy.html
@@ -338,11 +338,16 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="footer-col first">
-              <h6>Location</h6>
+              <h6>Contact Us</h6>
               <p class="p-small">
                 <i class="fas fa-map-marker-alt"></i> &nbsp;1st floor Casa Mitzi
                 Bldg, Sto. Rosario Street, Brgy Sto. Domingo, Angeles City of
                 Pampanga, Philippines
+              </p>
+              <p class="p-small">
+                <i class="fas fa-phone"></i> &nbsp;<a href="tel:09061245885"
+                  >+63 906 124 5885</a
+                >
               </p>
             </div>
             <!-- end of footer-col -->
@@ -355,10 +360,12 @@
                 </li>
 
                 <li>
-                  Menu: <a class="page-scroll" href="#header">Home</a>,
-                  <a class="page-scroll" href="#services">Services</a>,
+                  Menu:
+                  <a class="page-scroll" href="index.html#header">Home</a>,
+                  <a class="page-scroll" href="index.html#services">Services</a
+                  >,
 
-                  <a class="page-scroll" href="#pricing">Pricing</a>
+                  <a class="page-scroll" href="index.html#pricing">Pricing</a>
                 </li>
                 <li>
                   Socials:
@@ -411,8 +418,8 @@
               </span>
               <p class="p-small">
                 Send us an email at: <br />
-                <a href="mailto:glam&grace@gmail.com"
-                  ><strong>glam&grace@gmail.com</strong></a
+                <a href="mailto:glamandgracebeautystudio@gmail.com"
+                  ><strong>glamandgracebeautystudio@gmail.com</strong></a
                 >
               </p>
             </div>
@@ -425,6 +432,7 @@
       <!-- end of container -->
     </div>
     <!-- end of footer -->
+
     <!-- Copyright -->
     <div class="copyright">
       <div class="container">
