--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <link href="css/styles.css" rel="stylesheet" />
 
     <!-- Favicon  -->
-    <link rel="icon" href="pictures/icon.png" />
+    <link rel="icon" href="images/icon.png" />
   </head>
   <body data-spy="scroll" data-target=".fixed-top">
     <!-- Navigation -->
@@ -58,7 +58,7 @@
 
         <!-- Image Logo -->
         <a class="navbar-brand logo-image" href="index.html"
-          ><img src="pictures/glam logo.png" alt="alternative"
+          ><img src="images/glam-logo.png" alt="alternative"
         /></a>
 
         <button
@@ -298,7 +298,7 @@
               <div class="image-container">
                 <img
                   style="height: 140px"
-                  src="pictures/services1.jpg"
+                  src="images/services1.jpg"
                   alt="alternative"
                 />
               </div>
@@ -321,7 +321,7 @@
               <div class="image-container">
                 <img
                   style="height: 140px"
-                  src="pictures/services2.jpg"
+                  src="images/services2.jpg"
                   alt="alternative"
                 />
               </div>
@@ -344,7 +344,7 @@
               <div class="image-container">
                 <img
                   style="height: 140px"
-                  src="pictures/services3.jpg"
+                  src="images/services3.jpg"
                   alt="alternative"
                 />
               </div>
@@ -369,7 +369,7 @@
               <div class="image-container">
                 <img
                   style="height: 140px"
-                  src="pictures/services4.jpg"
+                  src="images/services4.jpg"
                   alt="alternative"
                 />
               </div>
@@ -391,7 +391,7 @@
               <div class="image-container">
                 <img
                   style="height: 140px"
-                  src="pictures/services5.jpg"
+                  src="images/services5.jpg"
                   alt="alternative"
                 />
               </div>
@@ -414,7 +414,7 @@
               <div class="image-container">
                 <img
                   style="height: 140px"
-                  src="pictures/services6.jpg"
+                  src="images/services6.jpg"
                   alt="alternative"
                 />
               </div>
@@ -457,7 +457,7 @@
                         <div class="image-container">
                           <img
                             class="img-fluid"
-                            src="pictures/hair-services.jpg"
+                            src="images/hair-services.jpg"
                             alt="alternative"
                           />
                         </div>
@@ -493,7 +493,7 @@
                         <div class="image-container">
                           <img
                             class="img-fluid"
-                            src="pictures/makeup-services.jpg"
+                            src="images/makeup-services.jpg"
                             alt="alternative"
                           />
                         </div>
@@ -527,7 +527,7 @@
                         <div class="image-container">
                           <img
                             class="img-fluid"
-                            src="pictures/nail-services.jpg"
+                            src="images/nail-services.jpg"
                             alt="alternative"
                           />
                         </div>
@@ -760,7 +760,7 @@
                   ><div class="element-item-overlay">
                     <span>HAIR</span>
                   </div>
-                  <img src="pictures/hair1.jpg" alt="alternative"
+                  <img src="images/hair1.jpg" alt="alternative"
                 /></a>
               </div>
               <div class="element-item makeup">
@@ -768,7 +768,7 @@
                   ><div class="element-item-overlay">
                     <span>MAKE UP</span>
                   </div>
-                  <img src="pictures/makeup1.jpg" alt="alternative"
+                  <img src="images/makeup1.jpg" alt="alternative"
                 /></a>
               </div>
               <div class="element-item hair">
@@ -776,7 +776,7 @@
                   ><div class="element-item-overlay">
                     <span>HAIR</span>
                   </div>
-                  <img src="pictures/hair3.jpg" alt="alternative"
+                  <img src="images/hair3.jpg" alt="alternative"
                 /></a>
               </div>
               <div class="element-item makeup">
@@ -784,7 +784,7 @@
                   ><div class="element-item-overlay">
                     <span>MAKE UP</span>
                   </div>
-                  <img src="pictures/makeup2.png" alt="alternative"
+                  <img src="images/makeup2.png" alt="alternative"
                 /></a>
               </div>
               <div class="element-item makeup">
@@ -792,7 +792,7 @@
                   ><div class="element-item-overlay">
                     <span>MAKE UP</span>
                   </div>
-                  <img src="pictures/makeup3.jpg" alt="alternative"
+                  <img src="images/makeup3.jpg" alt="alternative"
                 /></a>
               </div>
               <div class="element-item hair">
@@ -800,7 +800,7 @@
                   ><div class="element-item-overlay">
                     <span>HAIR</span>
                   </div>
-                  <img src="pictures/hair5.jpg" alt="alternative"
+                  <img src="images/hair5.jpg" alt="alternative"
                 /></a>
               </div>
               <div class="element-item makeup">
@@ -808,7 +808,7 @@
                   ><div class="element-item-overlay">
                     <span>MAKE UP</span>
                   </div>
-                  <img src="pictures/makeup4.png" alt="alternative"
+                  <img src="images/makeup4.png" alt="alternative"
                 /></a>
               </div>
               <div class="element-item hair">
@@ -816,7 +816,7 @@
                   ><div class="element-item-overlay">
                     <span>HAIR</span>
                   </div>
-                  <img src="pictures/hair7.jpg" alt="alternative"
+                  <img src="images/hair7.jpg" alt="alternative"
                 /></a>
               </div>
               <!-- end of hair -->
@@ -842,7 +842,7 @@
         </button>
         <div class="col-lg-8">
           <div class="image-container">
-            <img class="img-fluid" src="pictures/hair1.jpg" alt="alternative" />
+            <img class="img-fluid" src="images/hair1.jpg" alt="alternative" />
           </div>
           <!-- end of image-container -->
         </div>
@@ -889,7 +889,7 @@
           <div class="image-container">
             <img
               class="img-fluid"
-              src="pictures/makeup1.1.png"
+              src="images/makeup1.1.png"
               alt="alternative"
             />
           </div>
@@ -938,7 +938,7 @@
         </button>
         <div class="col-lg-8">
           <div class="image-container">
-            <img class="img-fluid" src="pictures/hair3.jpg" alt="alternative" />
+            <img class="img-fluid" src="images/hair3.jpg" alt="alternative" />
           </div>
           <!-- end of image-container -->
         </div>
@@ -985,7 +985,7 @@
           <div class="image-container">
             <img
               class="img-fluid"
-              src="pictures/makeup2.2.png"
+              src="images/makeup2.2.png"
               alt="alternative"
             />
           </div>
@@ -1036,7 +1036,7 @@
           <div class="image-container">
             <img
               class="img-fluid"
-              src="pictures/makeup3.3.png"
+              src="images/makeup3.3.png"
               alt="alternative"
             />
           </div>
@@ -1085,7 +1085,7 @@
         </button>
         <div class="col-lg-8">
           <div class="image-container">
-            <img class="img-fluid" src="pictures/hair5.jpg" alt="alternative" />
+            <img class="img-fluid" src="images/hair5.jpg" alt="alternative" />
           </div>
           <!-- end of image-container -->
         </div>
@@ -1131,7 +1131,7 @@
           <div class="image-container">
             <img
               class="img-fluid"
-              src="pictures/makeup4.4.png"
+              src="images/makeup4.4.png"
               alt="alternative"
             />
           </div>
@@ -1180,7 +1180,7 @@
         </button>
         <div class="col-lg-8">
           <div class="image-container">
-            <img class="img-fluid" src="pictures/hair7.jpg" alt="alternative" />
+            <img class="img-fluid" src="images/hair7.jpg" alt="alternative" />
           </div>
           <!-- end of image-container -->
         </div>
@@ -1510,7 +1510,7 @@
             <div class="image-container">
               <img
                 class="img-fluid"
-                src="pictures/teampic2.jpg"
+                src="images/teampic2.jpg"
                 alt="alternative"
               />
             </div>
