--- a/privacy.html
+++ b/privacy.html
@@ -47,7 +47,7 @@
     <link href="css/styles.css" rel="stylesheet" />
 
     <!-- Favicon  -->
-    <link rel="icon" href="pictures/icon.png" />
+    <link rel="icon" href="images/icon.png" />
   </head>
   <body data-spy="scroll" data-target=".fixed-top">
     <!-- Navigation -->
@@ -58,7 +58,7 @@
 
         <!-- Image Logo -->
         <a class="navbar-brand logo-image" href="index.html"
-          ><img src="pictures/glam logo.png" alt="alternative"
+          ><img src="images/glam-logo.png" alt="alternative"
         /></a>
 
         <button
@@ -123,15 +123,21 @@
           </ul>
           <span class="nav-item social-icons">
             <span class="fa-stack">
-              <a href="#your-link">
+              <a
+                href="https://www.facebook.com/GlamAndGraceAngeles"
+                target="_blank"
+              >
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fab fa-facebook-f fa-stack-1x"></i>
               </a>
             </span>
             <span class="fa-stack">
-              <a href="#your-link">
+              <a
+                href="https://www.instagram.com/glamandgracebeautystudio/"
+                target="_blank"
+              >
                 <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-twitter fa-stack-1x"></i>
+                <i class="fab fa-instagram fa-stack-1x"></i>
               </a>
             </span>
           </span>
