--- a/index.html
+++ b/index.html
@@ -1588,8 +1588,8 @@
                 />
               </div>
               <div class="card-body">
-                <h6 class="card-title">Wanda</h6>
-                <p>Hair Stylist</p>
+                <h6 class="card-title">Shy</h6>
+                <p>Hair and Makeup Artist</p>
               </div>
             </div>
             <!-- end of card -->
@@ -1604,8 +1604,8 @@
                 />
               </div>
               <div class="card-body">
-                <h6 class="card-title">Nicole</h6>
-                <p>Makeup Artist</p>
+                <h6 class="card-title">Rona</h6>
+                <p>Hair and Makeup Artist</p>
               </div>
             </div>
             <!-- end of card -->
@@ -1620,7 +1620,7 @@
                 />
               </div>
               <div class="card-body">
-                <h6 class="card-title">Kevin</h6>
+                <h6 class="card-title">Ian</h6>
                 <p>Hair and Makeup Artist</p>
               </div>
             </div>
@@ -1636,8 +1636,8 @@
                 />
               </div>
               <div class="card-body">
-                <h6 class="card-title">Tanya</h6>
-                <p>Manager</p>
+                <h6 class="card-title">Myka</h6>
+                <p>Hair and Makeup Artist</p>
               </div>
             </div>
             <!-- end of card -->
@@ -1885,4 +1885,4 @@
 </html>
 
 Built with Bootstrap 4, HTML/CSS, JS, Google Fonts, Font Awesome; Last modified:
-4/18/2023 @ 18:34:34
+4/19/2023 @ 16:23:45
