--- a/index.html
+++ b/index.html
@@ -1855,7 +1855,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <p class="p-small">© 2023 by CPE Student Dan Estrada</p>
+            <p class="p-small">© April 2023 by Dan Estrada</p>
           </div>
           <!-- end of col -->
         </div>
